--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -7,6 +7,7 @@
 *** xref:deployment/general/general-info.adoc[General Info]
 *** xref:deployment/binary/binary-setup.adoc[Binary Setup]
 *** xref:deployment/container/container-setup.adoc[Container Setup]
+*** xref:deployment/kubernetes/kubernetes.adoc[Kubernetes and Helm Charts]
 *** xref:deployment/security.adoc[Securing oCIS]
 *** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
 *** xref:extensions/index.adoc[Extensions]
