--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,11 +1,17 @@
 = Introduction to ownCloud Infinite Scale
-:toc: right
+:toc: macro
 :toclevels: 2
+
+image::root/beta-badge-1.svg[width=300]
+image::root/beta-badge-2.svg[width=300]
+image::root/beta-tools.svg[width=300]
 
 :ocis_youtube_long_url: https://www.youtube.com/watch?v=C4a4q9IGyFQ&list=PLXpTv1ixYy3-b5LScHyYqMNwEsZYgejdX&index=16
 :ocis_youtube_short_url: C4a4q9IGyFQ
 
 :description: Welcome to the ownCloud Infinite Scale (oCIS) documentation. oCIS is a data platform providing tools to integrate, organize, share and govern data and metadata. This guide provides information on general topics, on installation and administrative tasks for oCIS.
+
+toc::[]
 
 == Introduction
 
