--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -10,16 +10,16 @@
 *** xref:deployment/kubernetes/kubernetes.adoc[Kubernetes and Helm Charts]
 *** xref:deployment/security/security.adoc[Securing oCIS]
 *** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
-*** xref:extensions/index.adoc[Extensions]
-**** xref:extensions/audit.adoc[Audit Service Configuration]
-**** xref:extensions/webdav.adoc[WebDAV Service Configuration]
+*** xref:deployment/extensions/extensions.adoc[Extensions]
+**** xref:deployment/extensions/audit.adoc[Audit]
+**** xref:deployment/extensions/webdav.adoc[WebDAV]
+*** xref:deployment/configuration/index.adoc[Configuration]
+**** xref:deployment/configuration/ocis-config.adoc[Configuration of ownCloud Infinite Space]
+**** xref:deployment/configuration/external-user-management.adoc[Management of External Users]
+**** xref:deployment/configuration/email-config.adoc[Mail Server Configuration]
+**** xref:cdeployment/onfiguration/storage.adoc[Storage Configuration]
+**** xref:deployment/configuration/office-integrations.adoc[Integrating Office Applications]
+**** xref:deployment/configuration/roles-permissions.adoc[Roles & Permissions]
 ** xref:migration/index.adoc[Migrating from ownCloud 10 to ownCloud Infinite Scale]
-** xref:configuration/index.adoc[Configuration]
-*** xref:configuration/ocis-config.adoc[Configuration of ownCloud Infinite Space]
-*** xref:configuration/external-user-management.adoc[Management of External Users]
-*** xref:configuration/email-config.adoc[Mail Server Configuration]
-*** xref:configuration/storage.adoc[Storage Configuration]
-*** xref:configuration/office-integrations.adoc[Integrating Office Applications]
-*** xref:configuration/roles-permissions.adoc[Roles & Permissions]
 ** xref:maintenance/index.adoc[Maintenance]
 
